// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`align.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
|a|b|c|
|:--|:-:|--:|
|d|e|f|

=====================================output=====================================
| a   |  b  |   c |
| :-- | :-: | --: |
| d   |  e  |   f |

================================================================================
`;

exports[`cjk.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
| abc | def | ghi |
| --- | --- | --- |
| 第一欄 | 第二欄 | 第三欄 |

=====================================output=====================================
| abc    | def    | ghi    |
| ------ | ------ | ------ |
| 第一欄 | 第二欄 | 第三欄 |

================================================================================
`;

exports[`emoji.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
| abc | def | ghi |
| --- | --- | --- |
| 👍👍👍 | 👍👍👍 | 👍👍👍 |

| jkl |
| --- |
| 👨🏻‍👩🏻‍👧🏻‍👦🏻 |

=====================================output=====================================
| abc    | def    | ghi    |
| ------ | ------ | ------ |
| 👍👍👍 | 👍👍👍 | 👍👍👍 |

| jkl |
| --- |
| 👨🏻‍👩🏻‍👧🏻‍👦🏻  |

================================================================================
`;

exports[`empty.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
Foo | Bar
--- | ---
X   |
Y   |

=====================================output=====================================
| Foo | Bar |
| --- | --- |
| X   |
| Y   |

================================================================================
`;

exports[`escape.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
| a | b | c |
|:--|:-:|--:|
| \\| | \\| | \\| |

| a | b |
|:--|:-:|
| \`\\|\` | \`\\\\\\|\` |
| \`\\|\\|\` | \`\\\\\\\\\\|\` |

| a   | b   |
| --- | --- |
| \`not | inline code\`  |

=====================================output=====================================
| a   |  b  |   c |
| :-- | :-: | --: |
| \\|  | \\|  |  \\| |

| a      |    b     |
| :----- | :------: |
| \`\\|\`   |  \`\\\\\\|\`  |
| \`\\|\\|\` | \`\\\\\\\\\\|\` |

| a    | b            |
| ---- | ------------ |
| \`not | inline code\` |

================================================================================
`;

exports[`html.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
Default | CLI Override | API Override
--------|--------------|-------------
\`"none"\` | <code>--trailing-comma <none&#124;es5&#124;all></code> | <code>trailingComma: "<none&#124;es5&#124;all>"</code>

=====================================output=====================================
| Default  | CLI Override                                           | API Override                                           |
| -------- | ------------------------------------------------------ | ------------------------------------------------------ |
| \`"none"\` | <code>--trailing-comma <none&#124;es5&#124;all></code> | <code>trailingComma: "<none&#124;es5&#124;all>"</code> |

================================================================================
`;

exports[`issue-15572.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
|     |     |
| :-: | :-: |
|  ✔  |  ✘  |
|  ✘  |  ✔  |
|  ✔  |  ✘  |
=====================================output=====================================
|     |     |
| :-: | :-: |
|  ✔  |  ✘  |
|  ✘  |  ✔  |
|  ✔  |  ✘  |

================================================================================
`;

exports[`simple.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
| Title A | Title B | Title C |
|---|---|---|
| content A | content B | content C |

=====================================output=====================================
| Title A   | Title B   | Title C   |
| --------- | --------- | --------- |
| content A | content B | content C |

================================================================================
`;

exports[`table.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
- min-table

  | Age | Time | Food | Gold | Requirement |
  | ------------ | ----- | ---- | ---- | ----------------------- |
  | Feudal Age | 02:10 | 500 | 0 | Dark Age building x 2 |
  | Castle Age | 02:40 | 800 | 200 |- |
  | Imperial Age | 03:30 | 1000 | 800 | Castle Age building x 2 |
- big-table

  |学号|姓名|分数|
  |-|-|-|
  |小明|男|75|
  |小红|女|79|
  |小陆|男|92|

| col1 | col2 | col3 |
|---|--|--|
| long text | \`\` | text |

=====================================output=====================================
- min-table

  | Age          | Time  | Food | Gold | Requirement             |
  | ------------ | ----- | ---- | ---- | ----------------------- |
  | Feudal Age   | 02:10 | 500  | 0    | Dark Age building x 2   |
  | Castle Age   | 02:40 | 800  | 200  | -                       |
  | Imperial Age | 03:30 | 1000 | 800  | Castle Age building x 2 |

- big-table

  | 学号 | 姓名 | 分数 |
  | ---- | ---- | ---- |
  | 小明 | 男   | 75   |
  | 小红 | 女   | 79   |
  | 小陆 | 男   | 92   |

| col1      | col2 | col3 |
| --------- | ---- | ---- |
| long text | \`\`   | text |

================================================================================
`;
